--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -7,6 +7,11 @@ body, html {
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr 1fr 5fr 1fr;
+  grid-template-areas:
+    "header header"
+    "sidebar nav"
+    "sidebar article"
+    "footer footer";
   gap: 15px;
   text-align: center;
   height: 100%;
@@ -24,12 +29,14 @@ body, html {
 }
 
 .header {
-  grid-column: span 2;
+  /* grid-column: span 2; */
+  grid-area: header;
   background-color: #FFDE22;
 }
 
 .sidebar {
-  grid-row: 2 / 4;
+  /* grid-row: 2 / 4; */
+  grid-area: sidebar;
   background-color: #FF7755;
 }
 
@@ -38,7 +45,8 @@ body, html {
 }
 
 .article {
-  grid-column: 2 / -1;
+  /* grid-column: 2 / -1; */
+  grid-area: article;
   background-color: #bccbde;
 }
 
@@ -50,6 +58,7 @@ body, html {
 }
 
 .footer {
-  grid-column: span 2;
+  /* grid-column: span 2; */
+  grid-area: footer;
   background-color: #393f4d;
 }
