--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -3,7 +3,14 @@
   padding: 0;
 }
 
+ul {
+  list-style-type: none;
+}
+
 .container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  gap: 4px;
   text-align: center;
 }
 
@@ -16,7 +23,23 @@
 }
 
 .header {
+  grid-column: span 2;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
   background-color: #393f4d;
+}
+
+.menu {
+  align-self: center;
+}
+
+.logo {
+  justify-self: start;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .menu ul,
@@ -25,10 +48,15 @@
 }
 
 .sidebar {
+  grid-row: 2 / 4; /* Rows are implicit in this design */
+  display: grid;
+  gap: 50px;
   background-color: #FF7755;
 }
 
 .sidebar .photo {
+  display: grid;
+  place-items: center;
   background-color: white;
   color: black;
   font-size: 12px;
@@ -38,6 +66,8 @@
 
 
 .sidebar .side-content {
+  display: grid;
+  place-items: center;
   background-color: white;
   color: black;
   font-size: 16px;
@@ -45,7 +75,13 @@
 }
 
 .nav {
+  grid-column-start: 2;
   background-color: #FF7755;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
@@ -54,6 +90,9 @@
 }
 
 .article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
   background-color: #bccbde;
 }
 
@@ -65,6 +104,7 @@
 }
 
 .article .card {
+  height: 200px;
   background-color: #FFFFFF;
   color: black;
   text-align: center;
@@ -82,6 +122,7 @@
 }
 
 .footer {
+  grid-column: span 2;
   background-color: #393f4d;
 }
 
